15 October 2025: Wouter
	- Fix to drop UDP for discard-timeout, but not stream connections.
	- Fix to reply with SERVFAIL when the wait-limit is exceeded.
	- Add extended dns error code for invalid query type to definition
	  list.
	- Fix to update openssl version in ios ci.

10 October 2025: Wouter
	- Fix #1358 Enabling FIPS in OpenSSL causes unit test to fail.

3 October 2025: Yorgos
	- Note 'respip' and 'dns64' module order in the unbound.conf
	  man page.
	- Note clearly that 'wait-limit: 0' disables all wait limits.
	- 'wait-limit-cookie: 0' can now disable cookie validated wait
	  limits.

2 October 2025: Wouter
	- Fix that https is set up as enabled when the port is listed in
	  interface-automatic-ports. Also for the set up of quic it is
	  enabled when listed there.

30 September 2025: Wouter
	- Fix for #1344: Fix that respip and dns64 can be enabled at the
	  same time, the client info is copied for attach_sub and add_sub
	  calls. That makes respip work on dns64 synthesized answers, and
	  also makes RPZ work with DNS64. The order for the modules is
	  module-config: "respip dns64 validator iterator".

29 September 2025: Wouter
	- Rebuild configure script from its sources.
	- Fix modstack_call_init to use the original string when it has
	  changed, to call modstack_config with. And skip the changed name
	  in the string correctly. Thanks to Jan Komissar.
	- Neaten up the change in acx_nlnetlabs.m4 to version 49.
	- Fix fr_atomic_copy_cfg.
	- Rebuild configure script from its sources.
	- Fix #1353: auth-zone can not use empty label for $ORIGIN when
	  http download.
	- Fix #1344: module conf 'respip dns64 validator cachedb iterator'
	  is not known to work.

29 September 2025: Yorgos
	- Merge #1349: Fix #1346: [FR] Please allow back TLS 1.2.
	- Merge #1351: ac_cv_func_malloc_0_nonnull for malloc(0) check.

26 September 2025: Yorgos
	- Test for nonstring attribute in configure and add
	  nonstring attribute annotations.

24 September 2025: Yorgos